# hag

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
hag/: __init__.py  __main__.py  type_specs.py
hag/displays/: __init__.py  _base.py  json.py  roff.py  text.py
hag/extractors/: __init__.py  alacritty.py  lazygit.py  lf.py  mpv.py  qutebrowser.py  rofi.py  sxhkd.py  sxiv.py  termite.py  vim.py  vimiv.py  zathura.py  zsh.py
hag/extractors/sources/: __init__.py
hag/parsers/: __init__.py  _base.py  alacritty.py  bash.py  gimp.py  inkscape.py  lf.py  mpv.py  neovim.py  qutebrowser.py  rofi.py  sioyek.py  sxhkd.py  sxiv.py  termite.py  vim.py  vimiv.py  zathura.py  zsh.py
hag/parsers/sources/: __init__.py  _base.py  command.py  file.py  man_page.py  python_module.py  sources.py  web_page.py
hkh/: __init__.py  __main__.py
hkh/displays/: __init__.py  base.py  text.py
hkh/extractors/: __init__.py  base.py  lazygit.py  lf.py  mpv.py  neovim.py  qutebrowser.py  rofi.py  sxhkd.py  sxiv.py  termite.py  vim.py  vimiv.py  zathura.py  zsh.py
hkh/extractors/sources/: __init__.py  sources.py
hotkey_helper/: __main__.py  util.py
hotkey_helper/displays/: __init__.py
hotkey_helper/extractors/: __init__.py  base.py  lf.py  mpv.py  qutebrowser.py  rofi.py  sxhkd.py  sxiv.py  termite.py  vim.py  zathura.py
tests/unit/sources/: test_command.py  test_file.py  test_man_page.py  test_python_module.py  test_web_page.py
