[tool.poetry]
name = "hkh"
version = "0.1.0"
description = "A hotkey helper."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hag = 'hag.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
