[tool.poetry]
name = "hag"
version = "0.2.1"
description = "A hotkey aggregator. All your hotkeys in one place."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
repository = "https://github.com/loiccoyle/hag"
readme = "README.md"
classifiers = [
    "Topic :: Utilities",
    "Operating System :: Unix",
    "Programming Language :: Python",
]
keywords = ["hotkey", "aggregator", "cli"]

[tool.poetry.dependencies]
python = "^3.6.1"
pyyaml = {version = "^6.0", extras = ["yaml"]}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hag = 'hag.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
