[tool.poetry]
name = "hag"
version = "0.3.3"
description = "A hotkey aggregator. All your hotkeys in one place."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
repository = "https://github.com/loiccoyle/hag"
readme = "README.md"
classifiers = [
    "Topic :: Utilities",
    "Operating System :: Unix",
    "Programming Language :: Python",
]
keywords = ["hotkey", "aggregator", "cli"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = {version = "^6.0", optional = true}
python-mpv = {version = "^1.0.1", optional = true}
pynvim = {version = "^0.4.3", optional = true}

[tool.poetry.extras]
alacritty = ["pyyaml"]
neovim = ["pynvim"]
mpv = ["python-mpv"]
all = ["pyyaml", "python-mpv", "pynvim"]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hag = 'hag.__main__:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
